--- a/aspire/HabitFlow.AppHost/HabitFlow.AppHost.csproj
+++ b/aspire/HabitFlow.AppHost/HabitFlow.AppHost.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0" />
     <PackageReference Include="Aspire.Hosting.Keycloak" Version="9.1.0-preview.1.25121.10" />
+    <PackageReference Include="Aspire.Hosting.SqlServer" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
