--- a/src/HabitFlow.Api/HabitFlow.Api.csproj
+++ b/src/HabitFlow.Api/HabitFlow.Api.csproj
@@ -8,12 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Keycloak.Authentication" Version="9.1.0-preview.1.25121.10" />
+    <PackageReference Include="Aspire.Microsoft.Data.SqlClient" Version="9.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\aspire\HabitFlow.ServiceDefaults\HabitFlow.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\HabitFlow.Application\HabitFlow.Application.csproj" />
+    <ProjectReference Include="..\HabitFlow.Infrastructure\HabitFlow.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
