--- a/src/HabitFlow.Infrastructure/HabitFlow.Infrastructure.csproj
+++ b/src/HabitFlow.Infrastructure/HabitFlow.Infrastructure.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Keycloak.Authentication" Version="9.1.0-preview.1.25121.10" />
+    <PackageReference Include="Aspire.Microsoft.Data.SqlClient" Version="9.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
