Implementing register user use case.

--- a/src/HabitFlow.Application/HabitFlow.Application.csproj
+++ b/src/HabitFlow.Application/HabitFlow.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HabitFlow.Domain\HabitFlow.Domain.csproj" />
     <ProjectReference Include="..\HabitFlow.SharedKernel\HabitFlow.SharedKernel.csproj" />
   </ItemGroup>
 
